@@ -24,7 +24,7 @@ const app = express();
 const http = require('http');
 const https = require('https');
 const path = require('path');
-const version = require('../viewer/version');
+const version = require('../common/version');
 const User = require('../common/user');
 const Auth = require('../common/auth');
 const ArkimeCache = require('../common/arkimeCache');
