@@ -30,7 +30,7 @@ const async = require('async');
 const Pcap = require('./pcap.js');
 const Db = require('./db.js');
 const molochparser = require('./molochparser.js');
-const version = require('./version');
+const version = require('../common/version');
 const http = require('http');
 const https = require('https');
 const onHeaders = require('on-headers');
