@@ -37,7 +37,7 @@ const bp = require('body-parser');
 const jsonParser = bp.json();
 const axios = require('axios');
 const chalk = require('chalk');
-const version = require('../viewer/version');
+const version = require('../common/version');
 const path = require('path');
 const User = require('../common/user');
 const Auth = require('../common/auth');
